--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "config": "^3.3.7",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
-    "gravator": "^1.0.2",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
     "request": "^2.88.2"
